# risk-scoring-system

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-prod.txt  requirements.txt
.github/workflows/: ci.yml
api/: Dockerfile  main.py  schema.py
notebooks/: 01_eda_and_leakage.ipynb  01_eda_and_leakage.py
src/data/: ingest.py  split.py
src/evaluation/: explain.py  monitor.py  optimize.py
src/features/: preprocess.py
src/models/: mlp.py
src/training/: train_lgbm.py  train_nn.py
tests/unit/: test_features.py
ui/: app.py
